--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "4         79084.10       0  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "4          1               1         79084.10       0  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +592,7 @@
        "[10000 rows x 11 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,17 +603,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "g:\\Deeplearning with ann\\venv\\lib\\site-packages\\sklearn\\preprocessing\\_encoders.py:975: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -619,25 +618,22 @@
        "       [1., 0., 0.]])"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "##one hot encoding\n",
+    "## Onehot encode 'Geography\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
-    "\n",
-    "\n",
-    "one_hot_encoder=OneHotEncoder(sparse=False)\n",
-    "geo_encoder=one_hot_encoder.fit_transform(data[['Geography']])\n",
-    "geo_encoder\n",
-    "\n"
+    "onehot_encoder_geo=OneHotEncoder()\n",
+    "geo_encoder=onehot_encoder_geo.fit_transform(data[['Geography']]).toarray()\n",
+    "geo_encoder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -647,27 +643,18 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "one_hot_encoder.get_feature_names_out(['Geography'])"
+    "onehot_encoder_geo.get_feature_names_out(['Geography'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "geo_encoded_df=pd.DataFrame(geo_encoder,columns=one_hot_encoder.get_feature_names_out(['Geography']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -785,18 +772,26 @@
        "[10000 rows x 3 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "geo_encoded_df=pd.DataFrame(geo_encoder,columns=onehot_encoder_geo.get_feature_names_out(['Geography']))\n",
     "geo_encoded_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +938,7 @@
        "4                0.0              1.0  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -956,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -964,13 +959,14 @@
     "with open('label_encoder_gender.pkl','wb') as file:\n",
     "    pickle.dump(label_encoder_gender,file)\n",
     "\n",
-    "with open('one_hot_encoder.pkl','wb') as file:\n",
-    "    pickle.dump('one_hot_encoder',file)\n"
+    "with open('onehot_encoder_geo.pkl','wb') as file:\n",
+    "    pickle.dump(onehot_encoder_geo,file)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -982,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -1234,7 +1230,7 @@
        "[10000 rows x 12 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1245,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -1265,7 +1261,7 @@
        "Name: Exited, Length: 10000, dtype: int64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1276,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1290,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -1311,7 +1307,7 @@
        "        -0.58062195,  1.73320628]])"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1322,12 +1318,243 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('scaler.pkl','wb') as file:\n",
     "    pickle.dump(scaler,file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ANN IMPLEMANTATION\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense\n",
+    "from tensorflow.keras.callbacks import EarlyStopping,TensorBoard\n",
+    "import datetime\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model=Sequential([\n",
+    "\n",
+    "    Dense(64,activation='relu',input_shape=(X_train.shape[1],)), #hidden layer connected with input layer\n",
+    "    Dense(32,activation='relu'),#Hidden 2\n",
+    "    Dense(1,activation='sigmoid')# output layer\n",
+    "\n",
+    "    \n",
+    "]\n",
+    "\n",
+    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_2\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense_6 (Dense)             (None, 64)                832       \n",
+      "                                                                 \n",
+      " dense_7 (Dense)             (None, 32)                2080      \n",
+      "                                                                 \n",
+      " dense_8 (Dense)             (None, 1)                 33        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 2945 (11.50 KB)\n",
+      "Trainable params: 2945 (11.50 KB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.losses.BinaryCrossentropy at 0x15322adbbb0>"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#forward and backpropagation\n",
+    "import tensorflow\n",
+    "opt=tensorflow.keras.optimizers.Adam(learning_rate=0.01)\n",
+    "loss=tensorflow.keras.losses.BinaryCrossentropy()\n",
+    "loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#compile model \n",
+    "model.compile(optimizer=opt,loss=\"binary_crossentropy\",metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set up the tensorboard\n",
+    "from tensorflow.keras.callbacks import EarlyStopping,TensorBoard\n",
+    "\n",
+    "log_dir='logs/fit'+ datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
+    "tensorflow_callback=TensorBoard(log_dir=log_dir,histogram_freq=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#setup early stopping \n",
+    "early_stopping_callbacks=EarlyStopping(monitor='val_loss', patience=10,restore_best_weights=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/100\n",
+      "250/250 [==============================] - 2s 4ms/step - loss: 0.3897 - accuracy: 0.8366 - val_loss: 0.4124 - val_accuracy: 0.8220\n",
+      "Epoch 2/100\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.3535 - accuracy: 0.8545 - val_loss: 0.3787 - val_accuracy: 0.8340\n",
+      "Epoch 3/100\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.3424 - accuracy: 0.8627 - val_loss: 0.3737 - val_accuracy: 0.8380\n",
+      "Epoch 4/100\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.3393 - accuracy: 0.8629 - val_loss: 0.3687 - val_accuracy: 0.8425\n",
+      "Epoch 5/100\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.3364 - accuracy: 0.8640 - val_loss: 0.3708 - val_accuracy: 0.8400\n",
+      "Epoch 6/100\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.3346 - accuracy: 0.8654 - val_loss: 0.3722 - val_accuracy: 0.8420\n",
+      "Epoch 7/100\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.3312 - accuracy: 0.8660 - val_loss: 0.3691 - val_accuracy: 0.8510\n",
+      "Epoch 8/100\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.3265 - accuracy: 0.8669 - val_loss: 0.3711 - val_accuracy: 0.8460\n",
+      "Epoch 9/100\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.3263 - accuracy: 0.8661 - val_loss: 0.3584 - val_accuracy: 0.8500\n",
+      "Epoch 10/100\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.3241 - accuracy: 0.8656 - val_loss: 0.3683 - val_accuracy: 0.8420\n",
+      "Epoch 11/100\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.3231 - accuracy: 0.8708 - val_loss: 0.3781 - val_accuracy: 0.8535\n",
+      "Epoch 12/100\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.3203 - accuracy: 0.8716 - val_loss: 0.3666 - val_accuracy: 0.8460\n",
+      "Epoch 13/100\n",
+      "250/250 [==============================] - 1s 3ms/step - loss: 0.3191 - accuracy: 0.8708 - val_loss: 0.3790 - val_accuracy: 0.8480\n",
+      "Epoch 14/100\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.3171 - accuracy: 0.8676 - val_loss: 0.3670 - val_accuracy: 0.8505\n",
+      "Epoch 15/100\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.3116 - accuracy: 0.8733 - val_loss: 0.3684 - val_accuracy: 0.8460\n",
+      "Epoch 16/100\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.3114 - accuracy: 0.8771 - val_loss: 0.3692 - val_accuracy: 0.8470\n",
+      "Epoch 17/100\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.3096 - accuracy: 0.8730 - val_loss: 0.3805 - val_accuracy: 0.8470\n",
+      "Epoch 18/100\n",
+      "250/250 [==============================] - 1s 3ms/step - loss: 0.3098 - accuracy: 0.8741 - val_loss: 0.3766 - val_accuracy: 0.8465\n",
+      "Epoch 19/100\n",
+      "250/250 [==============================] - 1s 3ms/step - loss: 0.3058 - accuracy: 0.8759 - val_loss: 0.3675 - val_accuracy: 0.8465\n"
+     ]
+    }
+   ],
+   "source": [
+    "# training the model \n",
+    "history=model.fit(\n",
+    "    X_train,y_train,validation_data=(X_test,y_test),epochs=100,\n",
+    "    callbacks=[tensorflow_callback,early_stopping_callbacks]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "g:\\Deeplearning with ann\\venv\\lib\\site-packages\\keras\\src\\engine\\training.py:3000: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+      "  saving_api.save_model(\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.save('model.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The tensorboard extension is already loaded. To reload it, use:\n",
+      "  %reload_ext tensorboard\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Load tenserboard extension\n",
+    "%load_ext tensorboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#%tensorboard --logdir logs/fit"
    ]
   },
   {
